err/swift.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/swift'...
Listing './lib/python3.5/site-packages/swift/account'...
Compiling './lib/python3.5/site-packages/swift/account/auditor.py'...
***   File "./lib/python3.5/site-packages/swift/account/auditor.py", line 172
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/account/reaper.py'...
***   File "./lib/python3.5/site-packages/swift/account/reaper.py", line 310
    except ClientException, err:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/account/server.py'...
***   File "./lib/python3.5/site-packages/swift/account/server.py", line 69
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift/auth'...
Compiling './lib/python3.5/site-packages/swift/auth/server.py'...
***   File "./lib/python3.5/site-packages/swift/auth/server.py", line 152
    except BaseException, err:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift/common'...
Compiling './lib/python3.5/site-packages/swift/common/client.py'...
***   File "./lib/python3.5/site-packages/swift/common/client.py", line 646
    except ClientException, err:
                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/common/constraints.py'...
***   File "./lib/python3.5/site-packages/swift/common/constraints.py", line 138
    _invalid_xml = re.compile(ur'[^\x09\x0a\x0d\x20-\uD7FF\uE000-\uFFFD%s-%s]' %
                                                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/common/db.py'...
***   File "./lib/python3.5/site-packages/swift/common/db.py", line 73
    except sqlite3.OperationalError, e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/common/db_replicator.py'...
***   File "./lib/python3.5/site-packages/swift/common/db_replicator.py", line 321
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/common/direct_client.py'...
***   File "./lib/python3.5/site-packages/swift/common/direct_client.py", line 284
    except (socket.error, HTTPException, Timeout), err:
                                                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/common/memcached.py'...
***   File "./lib/python3.5/site-packages/swift/common/memcached.py", line 109
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift/common/ring'...
Compiling './lib/python3.5/site-packages/swift/common/utils.py'...
***   File "./lib/python3.5/site-packages/swift/common/utils.py", line 103
    print "posix_fadvise(%s, %s, %s, 4) -> %s" % (fd, offset, length, ret)
                                             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/common/wsgi.py'...
***   File "./lib/python3.5/site-packages/swift/common/wsgi.py", line 90
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift/container'...
Compiling './lib/python3.5/site-packages/swift/container/auditor.py'...
***   File "./lib/python3.5/site-packages/swift/container/auditor.py", line 202
    except socket.error, err:
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/container/server.py'...
***   File "./lib/python3.5/site-packages/swift/container/server.py", line 136
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift/obj'...
Compiling './lib/python3.5/site-packages/swift/obj/auditor.py'...
***   File "./lib/python3.5/site-packages/swift/obj/auditor.py", line 168
    except AuditException, err:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/obj/server.py'...
***   File "./lib/python3.5/site-packages/swift/obj/server.py", line 238
    except OSError, err:    # pragma: no cover
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/swift/obj/updater.py'...
***   File "./lib/python3.5/site-packages/swift/obj/updater.py", line 152
    except Exception, err:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift/proxy'...
Compiling './lib/python3.5/site-packages/swift/proxy/server.py'...
***   File "./lib/python3.5/site-packages/swift/proxy/server.py", line 657
    except ChunkReadTimeout, err:
                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/swift-1.0.2.egg-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/test/unit'...
Listing './lib/python3.5/site-packages/test/unit/account'...
Compiling './lib/python3.5/site-packages/test/unit/account/test_server.py'...
***   File "./lib/python3.5/site-packages/test/unit/account/test_server.py", line 42
    except OSError, err:
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/unit/auth'...
Listing './lib/python3.5/site-packages/test/unit/common'...
Listing './lib/python3.5/site-packages/test/unit/common/ring'...
Compiling './lib/python3.5/site-packages/test/unit/common/test_bufferedhttp.py'...
***   File "./lib/python3.5/site-packages/test/unit/common/test_bufferedhttp.py", line 48
    except BaseException, err:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/unit/common/test_utils.py'...
***   File "./lib/python3.5/site-packages/test/unit/common/test_utils.py", line 115
    except ValueError, err:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/unit/container'...
Compiling './lib/python3.5/site-packages/test/unit/container/test_server.py'...
***   File "./lib/python3.5/site-packages/test/unit/container/test_server.py", line 132
    except BaseException, err:
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/test/unit/container/test_updater.py'...
***   File "./lib/python3.5/site-packages/test/unit/container/test_updater.py", line 127
    except BaseException, err:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/unit/obj'...
Compiling './lib/python3.5/site-packages/test/unit/obj/test_updater.py'...
***   File "./lib/python3.5/site-packages/test/unit/obj/test_updater.py", line 115
    except BaseException, err:
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/test/unit/proxy'...
Listing './share'...
Listing './share/python-wheels'...
